Quorum3/Library/Tests/Actions/Pass/ChainedAction.quorum
class Main 
    action Main
        Main m = Test():Test()
        output "passed"
    end

    action Test returns Main
        return me
    end
end