Quorum3/Library/Tests/Actions/Fail/BadReturn.quorum
class Main
    action Main
        Test()
        output "Finished test!"
    end

    action Test
        if true
            return true
        end
        output "In test!"
    end
end